--- a/views/admin/add-coupon.ejs
+++ b/views/admin/add-coupon.ejs
@@ -71,7 +71,7 @@
               </div>
             </div>
   
-            <a type="button" class="btn btn-outline-info col-1" onclick="validatorCoupen()">submit</a>
+            <a type="button" class="btn btn-outline-info col-sm-3 col-form-label" onclick="validatorCoupen()">Submit</a>
   
           </div>
       </div>
