--- a/views/admin/list-banner.ejs
+++ b/views/admin/list-banner.ejs
@@ -6,10 +6,10 @@
             
             <tr>
                
-              <th class="align-middle" scope="col">title</th>
-              <th class="align-middle" scope="col">Created Date</th>
-              <th class="align-middle" scope="col">image</th>
-              <th class="align-middle" scope="col"></th>
+              <th class="align-middle" scope="col">Title</th>
+              <th class="align-middle" scope="col">Description</th>
+              <th class="align-middle" scope="col">Image</th>
+              <th class="align-middle" scope="col">Option</th>
 
 
             </tr>
@@ -20,7 +20,7 @@
               
               <td><a href="#" class="fw-bold"> <%=response.title%></a></td>
         
-              <td><%=response.created_at%></td>
+              <td><%=response.description%></td>
               <td>
           <img src="/uploads/<%=response?.image%>" alt="" style="width:100px;height:auto ">
               </td>
