--- a/views/admin/order-details.ejs
+++ b/views/admin/order-details.ejs
@@ -25,8 +25,8 @@
               class="form-select d-inline-block mb-lg-0 mb-15 mw-200"
               name="status"
             >
-              <option>Change status</option>
-              <option>success</option>
+              <!-- <option>Change status</option> -->
+              <option>Success</option>
               <option>Shipped</option>
               <option>Delivered</option>
             </select>
