--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -90,7 +90,7 @@
                     <a
                       aria-label="Compare"
                       class="action-btn small hover-up"
-                      href="shop-compare.html"
+                      href=""
                       tabindex="0"
                       ><i class="fi-rs-shuffle"></i
                     ></a>
