--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -47,11 +47,23 @@
             <input type="text" name="quantity" class="form-control" value="<%=editproduct.Quantity%>" />
   
             <label for="">Image</label>
-            <img src="/uploads/<%=editproduct.Image%>" alt="" style="width:100px;height:auto">
-            <input type="file" name="file2" value="<%=editproduct.Image%>" class="form-control" />
+            <img src="/uploads/<%=editproduct.Image[0]%>" alt="" style="width:100px;height:auto">
+            <img src="/uploads/<%=editproduct.Image[1]%>" alt="" style="width:100px;height:auto">
+            <img src="/uploads/<%=editproduct.Image[2]%>" alt="" style="width:100px;height:auto">
+            <img src="/uploads/<%=editproduct.Image[3]%>" alt="" style="width:100px;height:auto">
+            <input type="file" name="image1" value="<%=editproduct.Image%>" class="form-control" />
+            <input type="hidden" name="image1" value="<%=editproduct.Image[0]%>">
+            <input type="file" name="image2" value="<%=editproduct.Image%>" class="form-control" />
+            <input type="hidden" name="image2" value="<%=editproduct.Image[1]%>">
+            <input type="file" name="image3" value="<%=editproduct.Image%>" class="form-control" />
+            <input type="hidden" name="image3" value="<%=editproduct.Image[2]%>">
+            <input type="file" name="image4" value="<%=editproduct.Image%>" class="form-control" />
+            <input type="hidden" name="image4" value="<%=editproduct.Image[3]%>">
   
             <button type="submit" class="btn btn-success mt-4">Submit</button>
           </form>
+          <br>
+          <br>
         </div>
       </div>
     </div>
