--- a/views/admin/sales-report.ejs
+++ b/views/admin/sales-report.ejs
@@ -21,7 +21,7 @@
 
   
 </div> 
-  <div class="ml-3 my-auto"><button class="btn btn-primary " type="submit">submit</button></div>
+  <div class="ml-3 my-auto"><button class="btn btn-primary " type="submit">Submit</button></div>
    
    <!-- <input class="ms-1" type="text" name="daterange" value="01/01/2022 - 12/01/2023"/> -->
 </form>
