--- a/views/partials/user-header.ejs
+++ b/views/partials/user-header.ejs
@@ -17,22 +17,7 @@
               <button type="submit" style="display: none;">Submit</button>
 
             </form>
-            <!-- <form action="#"> -->
-              <!-- <select class="select-active">
-                <option>All Categories</option>
-                <option>Women's</option>
-                <option>Men's</option>
-                <option>Cellphones</option>
-                <option>Computer</option>
-                <option>Electronics</option>
-                <option>Accessories</option>
-                <option>Home & Garden</option>
-                <option>Luggage</option>
-                <option>Shoes</option>
-                <option>Mother & Kids</option>
-              </select> -->
-              <!-- <input type="text" placeholder="Search for items..." /> -->
-            <!-- </form> -->
+          
           </div>
           <div class="header-action-right">
             <div class="header-action-2">
@@ -92,7 +77,7 @@
       <div class="header-wrap header-space-between position-relative main-nav d-flex justify-content-center" >
         <div class="logo logo-width-1 d-block d-lg-none">
             <h4>LAPZ<span style="color:black;">STORE</span></h4>
-            <a href="index.html"></a>
+            <a href="/"></a>
             
           
         </div>
@@ -120,72 +105,27 @@
         </div>
        
         <p class="mobile-promotion">
-          Happy <span class="text-brand">Mother's Day</span>. Big Sale Up to 40%
+          
         </p>
         <div class="header-action-right d-block d-lg-none">
           <div class="header-action-2">
             <div class="header-action-icon-2">
-              <a href="shop-wishlist.html">
+              <a href="/wishlist">
                 <img alt="Evara" src="assets/imgs/theme/icons/icon-heart.svg" />
-                <span class="pro-count white">4</span>
+                <% if(locals.userSession){%>
+                  <span class="pro-count blue" id="wish-count"><%= locals.wishCount %></span>
+                  <%}%>
               </a>
             </div>
             <div class="header-action-icon-2">
-              <a class="mini-cart-icon" href="shop-cart.html">
+              <a class="mini-cart-icon" href="/view_cart">
                 <img alt="Evara" src="assets/imgs/theme/icons/icon-cart.svg" />
-                <span class="pro-count white">2</span>
+                <% if(locals.userSession){%>
+                    
+                  <span class="pro-count blue" id="cart-count"><%= locals.count %></span>
+                  <%}%>
               </a>
-              <div class="cart-dropdown-wrap cart-dropdown-hm2">
-                <ul>
-                  <li>
-                    <div class="shopping-cart-img">
-                      <a href="shop-product-right.html"
-                        ><img
-                          alt="Evara"
-                          src="assets/imgs/shop/thumbnail-3.jpg"
-                      /></a>
-                    </div>
-                    <div class="shopping-cart-title">
-                      <h4>
-                        <a href="shop-product-right.html"
-                          >Plain Striola Shirts</a
-                        >
-                      </h4>
-                      <h3><span>1 × </span>$800.00</h3>
-                    </div>
-                    <div class="shopping-cart-delete">
-                      <a href="#"><i class="fi-rs-cross-small"></i></a>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="shopping-cart-img">
-                      <a href="shop-product-right.html"
-                        ><img
-                          alt="Evara"
-                          src="assets/imgs/shop/thumbnail-4.jpg"
-                      /></a>
-                    </div>
-                    <div class="shopping-cart-title">
-                      <h4>
-                        <a href="shop-product-right.html">Macbook Pro 2022</a>
-                      </h4>
-                      <h3><span>1 × </span>$3500.00</h3>
-                    </div>
-                    <div class="shopping-cart-delete">
-                      <a href="#"><i class="fi-rs-cross-small"></i></a>
-                    </div>
-                  </li>
-                </ul>
-                <div class="shopping-cart-footer">
-                  <div class="shopping-cart-total">
-                    <h4>Total <span>$383.00</span></h4>
-                  </div>
-                  <div class="shopping-cart-button">
-                    <a href="shop-cart.html">View cart</a>
-                    <a href="shop-checkout.html">Checkout</a>
-                  </div>
-                </div>
-              </div>
+              
             </div>
             <div class="header-action-icon-2 d-block d-lg-none">
               <div class="burger-icon burger-icon-white">
@@ -200,3 +140,94 @@
     </div>
   </div>
 </header>
+<div class="mobile-header-active mobile-header-wrapper-style">
+  <div class="mobile-header-wrapper-inner">
+    <div class="mobile-header-top">
+      <div class="mobile-header-logo">
+        <h4>LAPZ<span style="color:black;">STORE</span></h4>
+        <a href="/"
+
+        ></a>
+      </div>
+      <div
+        class="mobile-menu-close close-style-wrap close-style-position-inherit"
+      >
+        <button class="close-style search-close">
+          <i class="icon-top"></i>
+          <i class="icon-bottom"></i>
+        </button>
+      </div>
+    </div>
+    <div class="mobile-header-content-area">
+      <div class="mobile-search search-style-3 mobile-header-border">
+        <form action="/search" method="post"  >
+             
+          <input type="text"  name="search"  id="keyword" placeholder="Search for items..." />
+
+          <button type="submit" style="display: none;">Submit</button>
+
+        </form>
+      </div>
+      <div class="mobile-menu-wrap mobile-header-border">
+        
+        <!-- mobile menu start -->
+        <nav>
+          <ul class="mobile-menu">
+            <li class="menu-item-has-children">
+              <span class="menu-expand"></span><a href="/">Home</a>
+            </li>
+            <li class="menu-item-has-children">
+              <span class="menu-expand"></span><a href="/shop">Shop</a>
+            </li>
+            <li class="menu-item-has-children">
+              <span class="menu-expand"></span><a href="/order">Orders</a>
+            </li>
+         
+
+           
+          </ul>
+        </nav>
+        <!-- mobile menu end -->
+      </div>
+      <div class="mobile-header-info-wrap mobile-header-border">
+        <div class="single-mobile-header-info mt-30">
+          <%
+          if(!locals.userSession){%>
+           
+              <a href="/login" style="color: black">Log In</a>
+
+           
+
+           <%}
+           else{%>
+            
+
+             <a href="/profile" style="color: black">Profile</a>
+           
+             
+             <%}
+           %>
+        </div>
+       
+      </div>
+      <div class="mobile-social-icon">
+        <h5 class="mb-15 text-grey-4">Follow Us</h5>
+        <a href="#"
+          ><img src="assets/imgs/theme/icons/icon-facebook.svg" alt=""
+        /></a>
+        <a href="#"
+          ><img src="assets/imgs/theme/icons/icon-twitter.svg" alt=""
+        /></a>
+        <a href="#"
+          ><img src="assets/imgs/theme/icons/icon-instagram.svg" alt=""
+        /></a>
+        <a href="#"
+          ><img src="assets/imgs/theme/icons/icon-pinterest.svg" alt=""
+        /></a>
+        <a href="#"
+          ><img src="assets/imgs/theme/icons/icon-youtube.svg" alt=""
+        /></a>
+      </div>
+    </div>
+  </div>
+</div>
