--- a/views/user/order-details.ejs
+++ b/views/user/order-details.ejs
@@ -67,7 +67,7 @@
               
                 <div class="d-flex justify-content-between pt-2">
                   <p class="fw-bold mb-0"><%= address[0].fname%></p>
-                                                                             <%if(orderDetails.  orderStatus=='success'){ %>   
+                                                                             <%if(orderDetails.  orderStatus=='Success'){ %>   
                   <p class="text-muted mb-0"><span class="fw-bold me-4" ><span>Order Status</span>:   <span style="color:green;"><%=orderDetails. orderStatus%> </span> </p>
                                                                              <%} else if(orderDetails. orderStatus=='Delivered') {%>
                   <p class="text-muted mb-0"><span class="fw-bold me-4" ><span>Order Status</span>:   <span style="color: blueviolet;"><%=orderDetails. orderStatus%> </span> </p>
@@ -77,7 +77,7 @@
                   <p class="text-muted mb-0"><span class="fw-bold me-4" ><span>Order Status</span>:   <span style="color: red;"><%=orderDetails. orderStatus%> </span> </p>
                                                                               
                                                                               <%} %>
-                                                                                <%if(orderDetails. orderStatus=='success'){ %>   
+                                                                                <%if(orderDetails. orderStatus=='Success'){ %>   
           <button  class="btn btn-primary text-center" style="background: red; height:3rem" onclick="cancelorder('<%=orderDetails._id%>')">Cancell</button>
                                                                                   <%} %>
                                                                                   <%if(orderDetails. orderStatus=='Delivered'){ %>   
